package ma.urbanops.enums;

public enum Role {
    CITIZEN,
    ADMIN
}
