@startuml UrbanOps - Domaine metier (JPA)

title Diagramme de classes - Domaine metier (entites UrbanOps)

skinparam classAttributeIconSize 0

enum Role {
  CITIZEN
  ADMIN
}

enum IncidentStatus {
  OPEN
  IN_PROGRESS
  RESOLVED
}

enum Severity {
  HIGH
  MEDIUM
  LOW
}

class User {
  - Long id
  - String email
  - Role role
  ..
  autres attributs
}

class Category {
  - Long id
  - String name
  - String authorityEmail
}

class Sector {
  - Long id
  - String name
  - String city
}

class Incident {
  - Long id
  - String referenceCode
  - Severity severity
  - IncidentStatus status
  - Double latitude
  - Double longitude
  --
  + generateReferenceCode() : String
}

class Alert {
  - Long id
  - Severity severity
  - Boolean acknowledged
  --
  + acknowledge() : void
}

User ||--o{ Incident : reportedBy\n0..1 vers *
Category ||--o{ Incident : categorie\n1 vers *
Sector ||--o{ Incident : secteur\n1 vers *
Incident ||--o{ Alert : alertes\n1 vers 0..*

User ..> Role
Incident ..> IncidentStatus
Incident ..> Severity
Alert ..> Severity

note right of Incident
  Severite : AIAnalysisService
  (Gemini + fallback)
end note

@enduml
